--- a/example/package.json
+++ b/example/package.json
@@ -8,10 +8,10 @@
     "android": "expo run:android"
   },
   "dependencies": {
+    "@baeckerherz/expo-mapbox-navigation": "^0.1.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "expo": "~54.0.0",
     "expo-dev-client": "~6.0.20",
-    "@baeckerherz/expo-mapbox-navigation": "file:..",
     "expo-notifications": "~0.32.16",
     "react": "19.1.0",
     "react-native": "0.81.5",
